--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,8 @@ body{
     color:#f9f4da;
 }
 .custom-container{
-    max-width: 90%;
+    width: 90%;
+    max-width: 1700px;
     margin: auto;
     padding: 0 0 50px 0;
 }
@@ -83,6 +84,17 @@ label{
 .preview-button {
     display: none;
 }
+.home-container{
+    width: 100%;
+    height: 100svh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.inner-wrapper{
+    /* border: 1px solid red; */
+}
+
 @media only screen and (max-width: 740px) {
     .grid-container {
         grid-template-columns: 1fr;
@@ -90,4 +102,11 @@ label{
     .preview-button {
         display: block;
     }
+        h1 {
+            font-size: 1.6rem;
+        }
+
+        .heading-text {
+            font-size: 1rem;
+        }
 }
